src/markdown-new.y.output
Terminals which are not used

   UL
   LF_INDENT3_UL
   LF_INDENT4_UL
   LF_INDENT_VERTICAL
   LF_Q_INDENT2_UL
   LF_Q_INDENT_VERTICAL
   RIGHTSQUARE
   ITALICSTART
   LISTSTART


State 2 conflicts: 26 shift/reduce, 1 reduce/reduce
State 31 conflicts: 5 shift/reduce
State 36 conflicts: 3 shift/reduce
State 48 conflicts: 12 shift/reduce
State 51 conflicts: 8 shift/reduce
State 53 conflicts: 6 shift/reduce
State 58 conflicts: 1 shift/reduce
State 118 conflicts: 3 shift/reduce
State 120 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 4 shift/reduce
State 131 conflicts: 4 shift/reduce
State 132 conflicts: 5 shift/reduce
State 183 conflicts: 2 shift/reduce
State 184 conflicts: 3 shift/reduce
State 194 conflicts: 3 shift/reduce
State 195 conflicts: 4 shift/reduce
State 223 conflicts: 1 shift/reduce
State 234 conflicts: 2 shift/reduce


Grammar

    0 $accept: markdown_file $end

    1 markdown_file: blocks

    2 block: header
    3      | paragraph
    4      | BLANKLINE
    5      | HTMLTAG
    6      | SCRIPTSTART code_text SCRIPTEND
    7      | STYLESTART code_text STYLEEND
    8      | SVGSTART code_text SVGEND
    9      | unorderlist_0
   10      | codeblock
   11      | table
   12      | quote_block
   13      | error

   14 blocks: blocks block
   15       | /* empty */

   16 code_text: code_text code_text_item
   17          | code_text_item

   18 code_text_item: inline_code_text_item
   19               | BACKTICK

   20 codeblock: lf_indents code_text LINEBREAK
   21          | codeblock lf_indents code_text LINEBREAK

   22 header: LF_H inline_elements LINEBREAK

   23 image: EXCLAMATION_LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET uri_text RIGHTBRACKET
   24      | EXCLAMATION_LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET uri_text SPACE uri_text RIGHTBRACKET
   25      | EXCLAMATION_LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET uri_text error
   26      | EXCLAMATION_LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET error
   27      | EXCLAMATION_LEFTSQUARE inline_text error
   28      | EXCLAMATION_LEFTSQUARE error

   29 inline_code_text: inline_code_text inline_code_text_item
   30                 | inline_code_text_item

   31 inline_code_text_item: inline_text_item
   32                      | TRIPLEASTERISK
   33                      | TRIPLEUNDERSCORE
   34                      | DOUBLEASTERISK
   35                      | DOUBLEUNDERSCORE
   36                      | ASTERISK
   37                      | UNDERSCORE
   38                      | DOUBLETILDE
   39                      | EXCLAMATION_LEFTSQUARE
   40                      | LEFTSQUARE
   41                      | RIGHTSQUARE_LEFTBRACKET
   42                      | RIGHTBRACKET
   43                      | VERTICAL
   44                      | TRIPLEBACKTICK

   45 inline_element: inline_text
   46               | link
   47               | image
   48               | italic
   49               | strong
   50               | linethrough
   51               | inlinecode

   52 inline_elements: inline_elements inline_element
   53                | inline_element

   54 inline_text: inline_text inline_text_item
   55            | inline_text_item

   56 inline_text_item: uri_text_item
   57                 | ESCAPEDCHAR
   58                 | SPACE

   59 uri_text: uri_text uri_text_item
   60         | uri_text_item

   61 uri_text_item: TEXT

   62 inlinecode: BACKTICK inline_code_text BACKTICK
   63           | BACKTICK inline_code_text error
   64           | BACKTICK error

   65 italic: ASTERISK inline_text ASTERISK
   66       | ASTERISK inline_text error
   67       | ASTERISK error
   68       | UNDERSCORE inline_text UNDERSCORE
   69       | UNDERSCORE inline_text error
   70       | UNDERSCORE error

   71 lf_indents: LF_INDENT
   72           | lf_indents2

   73 lf_indents2: LF_INDENT2
   74            | lf_indents3

   75 lf_indents3: LF_INDENT3
   76            | lf_indents4

   77 lf_indents4: LF_INDENT4
   78            | lf_indents5

   79 lf_indents5: LF_INDENT5

   80 lf_indents2_codeblock: lf_indents2 code_text LINEBREAK
   81                      | lf_indents2_codeblock lf_indents2 code_text LINEBREAK

   82 lf_indents3_codeblock: lf_indents3 code_text LINEBREAK
   83                      | lf_indents3_codeblock lf_indents3 code_text LINEBREAK

   84 lf_indents4_codeblock: lf_indents4 code_text LINEBREAK
   85                      | lf_indents4_codeblock lf_indents4 code_text LINEBREAK

   86 lf_q_indents: LF_Q_INDENT
   87             | lf_q_indents2

   88 lf_q_indents2: LF_Q_INDENT2
   89              | lf_q_indents3

   90 lf_q_indents3: LF_Q_INDENT3

   91 lf_q_indents2_codeblock: lf_q_indents2 code_text LINEBREAK
   92                        | lf_q_indents2_codeblock lf_q_indents2 code_text LINEBREAK

   93 lf_q_indents3_codeblock: lf_q_indents3 code_text LINEBREAK
   94                        | lf_q_indents3_codeblock lf_q_indents3 code_text LINEBREAK

   95 linethrough: DOUBLETILDE inline_text DOUBLETILDE
   96            | DOUBLETILDE inline_text error
   97            | DOUBLETILDE error

   98 line: inline_elements LINEBREAK

   99 lines: line
  100      | lines line

  101 link: LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET uri_text RIGHTBRACKET
  102     | LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET uri_text SPACE uri_text RIGHTBRACKET
  103     | LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET uri_text error
  104     | LEFTSQUARE inline_text RIGHTSQUARE_LEFTBRACKET error
  105     | LEFTSQUARE inline_text error
  106     | LEFTSQUARE error
  107     | SIMPLELINK

  108 paragraph: lines

  109 quote_block: quote_block quote_header
  110            | quote_block quote_unorderlist_0
  111            | quote_block quote_paragraph
  112            | quote_block quote_codeblock
  113            | quote_block quote_table
  114            | quote_block QUOTEBLANKLINE
  115            | /* empty */

  116 quote_codeblock: lf_q_indents code_text LINEBREAK
  117                | quote_codeblock lf_q_indents code_text LINEBREAK

  118 quote_header: LF_Q_H inline_elements LINEBREAK

  119 quote_paragraph: LF_Q line
  120                | quote_paragraph LF_Q line

  121 quote_table: quote_table_head quote_table_body
  122            | quote_table_body

  123 quote_table_body: quote_table_rows

  124 quote_table_head: quote_table_row quote_table_head_separator

  125 quote_table_head_separator: quote_table_separator_row

  126 quote_table_row: LF_Q_VERTICAL table_cells LINEBREAK

  127 quote_table_rows: quote_table_row
  128                 | quote_table_rows quote_table_row

  129 quote_table_separator_row: LF_Q_VERTICAL_HEAD_SEP table_separator_cells LINEBREAK

  130 quote_unorderlist_0: LF_Q_UL line
  131                    | quote_unorderlist_0 LF_Q_UL line
  132                    | quote_unorderlist_0 LF_Q_INDENT line
  133                    | quote_unorderlist_0 lf_q_indents2_codeblock
  134                    | quote_unorderlist_0 quote_unorderlist_1

  135 quote_unorderlist_1: LF_Q_INDENT_UL line
  136                    | quote_unorderlist_1 LF_Q_INDENT_UL line
  137                    | quote_unorderlist_1 LF_Q_INDENT2 line
  138                    | quote_unorderlist_1 lf_q_indents3_codeblock

  139 strong: DOUBLEASTERISK inline_text DOUBLEASTERISK
  140       | DOUBLEASTERISK inline_text error
  141       | DOUBLEASTERISK error
  142       | DOUBLEUNDERSCORE inline_text DOUBLEUNDERSCORE
  143       | DOUBLEUNDERSCORE inline_text error
  144       | DOUBLEUNDERSCORE error

  145 unorderlist_0: LF_UL line
  146              | unorderlist_0 LF_UL line
  147              | unorderlist_0 LF_INDENT line
  148              | unorderlist_0 lf_indents2_codeblock
  149              | unorderlist_0 unorderlist_1

  150 unorderlist_1: LF_INDENT_UL line
  151              | unorderlist_1 LF_INDENT_UL line
  152              | unorderlist_1 LF_INDENT2 line
  153              | unorderlist_1 lf_indents3_codeblock
  154              | unorderlist_1 unorderlist_2

  155 unorderlist_2: LF_INDENT2_UL line
  156              | unorderlist_2 LF_INDENT2_UL line
  157              | unorderlist_2 LF_INDENT3 line
  158              | unorderlist_2 lf_indents4_codeblock

  159 table: table_head table_body
  160      | table_body

  161 table_body: table_rows

  162 table_cell: inline_elements VERTICAL

  163 table_cells: table_cell
  164            | table_cells table_cell

  165 table_head: table_row table_head_separator

  166 table_head_separator: table_separator_row

  167 table_row: LF_VERTICAL table_cells LINEBREAK

  168 table_rows: table_row
  169           | table_rows table_row

  170 table_separator_cell: table_separator_item

  171 table_separator_cells: table_separator_cell
  172                      | table_separator_cells table_separator_cell

  173 table_separator_item: MINUSSERIES_SEMI_VERTICAL
  174                     | SEMI_MINUSSERIES_VERTICAL
  175                     | SEMI_MINUSSERIES_SEMI_VERTICAL
  176                     | MINUSSERIES_VERTICAL

  177 table_separator_row: LF_VERTICAL_HEAD_SEP table_separator_cells LINEBREAK


Terminals, with rules where they appear

$end (0) 0
error (256) 13 25 26 27 28 63 64 66 67 69 70 96 97 103 104 105 106
    140 141 143 144
BLANKLINE (258) 4
QUOTEBLANKLINE (259) 114
LINEBREAK (260) 20 21 22 80 81 82 83 84 85 91 92 93 94 98 116 117 118
    126 129 167 177
LF_H (261) 22
LF_UL (262) 145 146
UL (263)
LF_VERTICAL (264) 167
LF_VERTICAL_HEAD_SEP (265) 177
LF_INDENT_UL (266) 150 151
LF_INDENT2_UL (267) 155 156
LF_INDENT3_UL (268)
LF_INDENT4_UL (269)
LF_INDENT_VERTICAL (270)
LF_INDENT (271) 71 147
LF_INDENT2 (272) 73 152
LF_INDENT3 (273) 75 157
LF_INDENT4 (274) 77
LF_INDENT5 (275) 79
LF_Q_H (276) 118
LF_Q_UL (277) 130 131
LF_Q_VERTICAL (278) 126
LF_Q_VERTICAL_HEAD_SEP (279) 129
LF_Q_INDENT_UL (280) 135 136
LF_Q_INDENT2_UL (281)
LF_Q_INDENT_VERTICAL (282)
LF_Q_INDENT (283) 86 132
LF_Q_INDENT2 (284) 88 137
LF_Q_INDENT3 (285) 90
LF_Q (286) 119 120
SIMPLELINK (287) 107
HTMLTAG (288) 5
SCRIPTSTART (289) 6
SCRIPTEND (290) 6
STYLESTART (291) 7
STYLEEND (292) 7
SVGSTART (293) 8
SVGEND (294) 8
ESCAPEDCHAR (295) 57
TRIPLEBACKTICK (296) 44
BACKTICK (297) 19 62 63 64
VERTICAL (298) 43 162
TRIPLEASTERISK (299) 32
DOUBLEASTERISK (300) 34 139 140 141
ASTERISK (301) 36 65 66 67
TRIPLEUNDERSCORE (302) 33
DOUBLEUNDERSCORE (303) 35 142 143 144
UNDERSCORE (304) 37 68 69 70
EXCLAMATION_LEFTSQUARE (305) 23 24 25 26 27 28 39
LEFTSQUARE (306) 40 101 102 103 104 105 106
RIGHTSQUARE_LEFTBRACKET (307) 23 24 25 26 41 101 102 103 104
RIGHTBRACKET (308) 23 24 42 101 102
DOUBLETILDE (309) 38 95 96 97
RIGHTSQUARE (310)
SEMI_MINUSSERIES_VERTICAL (311) 174
MINUSSERIES_SEMI_VERTICAL (312) 173
SEMI_MINUSSERIES_SEMI_VERTICAL (313) 175
MINUSSERIES_VERTICAL (314) 176
SPACE (315) 24 58 102
TEXT (316) 61
ITALICSTART (317)
LISTSTART (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
markdown_file (65)
    on left: 1, on right: 0
block (66)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13, on right: 14
blocks (67)
    on left: 14 15, on right: 1 14
code_text (68)
    on left: 16 17, on right: 6 7 8 16 20 21 80 81 82 83 84 85 91 92
    93 94 116 117
code_text_item (69)
    on left: 18 19, on right: 16 17
codeblock (70)
    on left: 20 21, on right: 10 21
header (71)
    on left: 22, on right: 2
image (72)
    on left: 23 24 25 26 27 28, on right: 47
inline_code_text (73)
    on left: 29 30, on right: 29 62 63
inline_code_text_item (74)
    on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44,
    on right: 18 29 30
inline_element (75)
    on left: 45 46 47 48 49 50 51, on right: 52 53
inline_elements (76)
    on left: 52 53, on right: 22 52 98 118 162
inline_text (77)
    on left: 54 55, on right: 23 24 25 26 27 45 54 65 66 68 69 95 96
    101 102 103 104 105 139 140 142 143
inline_text_item (78)
    on left: 56 57 58, on right: 31 54 55
uri_text (79)
    on left: 59 60, on right: 23 24 25 59 101 102 103
uri_text_item (80)
    on left: 61, on right: 56 59 60
inlinecode (81)
    on left: 62 63 64, on right: 51
italic (82)
    on left: 65 66 67 68 69 70, on right: 48
lf_indents (83)
    on left: 71 72, on right: 20 21
lf_indents2 (84)
    on left: 73 74, on right: 72 80 81
lf_indents3 (85)
    on left: 75 76, on right: 74 82 83
lf_indents4 (86)
    on left: 77 78, on right: 76 84 85
lf_indents5 (87)
    on left: 79, on right: 78
lf_indents2_codeblock (88)
    on left: 80 81, on right: 81 148
lf_indents3_codeblock (89)
    on left: 82 83, on right: 83 153
lf_indents4_codeblock (90)
    on left: 84 85, on right: 85 158
lf_q_indents (91)
    on left: 86 87, on right: 116 117
lf_q_indents2 (92)
    on left: 88 89, on right: 87 91 92
lf_q_indents3 (93)
    on left: 90, on right: 89 93 94
lf_q_indents2_codeblock (94)
    on left: 91 92, on right: 92 133
lf_q_indents3_codeblock (95)
    on left: 93 94, on right: 94 138
linethrough (96)
    on left: 95 96 97, on right: 50
line (97)
    on left: 98, on right: 99 100 119 120 130 131 132 135 136 137 145
    146 147 150 151 152 155 156 157
lines (98)
    on left: 99 100, on right: 100 108
link (99)
    on left: 101 102 103 104 105 106 107, on right: 46
paragraph (100)
    on left: 108, on right: 3
quote_block (101)
    on left: 109 110 111 112 113 114 115, on right: 12 109 110 111
    112 113 114
quote_codeblock (102)
    on left: 116 117, on right: 112 117
quote_header (103)
    on left: 118, on right: 109
quote_paragraph (104)
    on left: 119 120, on right: 111 120
quote_table (105)
    on left: 121 122, on right: 113
quote_table_body (106)
    on left: 123, on right: 121 122
quote_table_head (107)
    on left: 124, on right: 121
quote_table_head_separator (108)
    on left: 125, on right: 124
quote_table_row (109)
    on left: 126, on right: 124 127 128
quote_table_rows (110)
    on left: 127 128, on right: 123 128
quote_table_separator_row (111)
    on left: 129, on right: 125
quote_unorderlist_0 (112)
    on left: 130 131 132 133 134, on right: 110 131 132 133 134
quote_unorderlist_1 (113)
    on left: 135 136 137 138, on right: 134 136 137 138
strong (114)
    on left: 139 140 141 142 143 144, on right: 49
unorderlist_0 (115)
    on left: 145 146 147 148 149, on right: 9 146 147 148 149
unorderlist_1 (116)
    on left: 150 151 152 153 154, on right: 149 151 152 153 154
unorderlist_2 (117)
    on left: 155 156 157 158, on right: 154 156 157 158
table (118)
    on left: 159 160, on right: 11
table_body (119)
    on left: 161, on right: 159 160
table_cell (120)
    on left: 162, on right: 163 164
table_cells (121)
    on left: 163 164, on right: 126 164 167
table_head (122)
    on left: 165, on right: 159
table_head_separator (123)
    on left: 166, on right: 165
table_row (124)
    on left: 167, on right: 165 168 169
table_rows (125)
    on left: 168 169, on right: 161 169
table_separator_cell (126)
    on left: 170, on right: 171 172
table_separator_cells (127)
    on left: 171 172, on right: 129 172 177
table_separator_item (128)
    on left: 173 174 175 176, on right: 170
table_separator_row (129)
    on left: 177, on right: 166


state 0

    0 $accept: . markdown_file $end

    $default  reduce using rule 15 (blocks)

    markdown_file  go to state 1
    blocks         go to state 2


state 1

    0 $accept: markdown_file . $end

    $end  shift, and go to state 3


state 2

    1 markdown_file: blocks .
   14 blocks: blocks . block

    error                   shift, and go to state 4
    BLANKLINE               shift, and go to state 5
    LF_H                    shift, and go to state 6
    LF_UL                   shift, and go to state 7
    LF_VERTICAL             shift, and go to state 8
    LF_INDENT               shift, and go to state 9
    LF_INDENT2              shift, and go to state 10
    LF_INDENT3              shift, and go to state 11
    LF_INDENT4              shift, and go to state 12
    LF_INDENT5              shift, and go to state 13
    SIMPLELINK              shift, and go to state 14
    HTMLTAG                 shift, and go to state 15
    SCRIPTSTART             shift, and go to state 16
    STYLESTART              shift, and go to state 17
    SVGSTART                shift, and go to state 18
    ESCAPEDCHAR             shift, and go to state 19
    BACKTICK                shift, and go to state 20
    DOUBLEASTERISK          shift, and go to state 21
    ASTERISK                shift, and go to state 22
    DOUBLEUNDERSCORE        shift, and go to state 23
    UNDERSCORE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LEFTSQUARE              shift, and go to state 26
    DOUBLETILDE             shift, and go to state 27
    SPACE                   shift, and go to state 28
    TEXT                    shift, and go to state 29

    $end                    reduce using rule 1 (markdown_file)
    $end                    [reduce using rule 115 (quote_block)]
    error                   [reduce using rule 115 (quote_block)]
    BLANKLINE               [reduce using rule 115 (quote_block)]
    QUOTEBLANKLINE          reduce using rule 115 (quote_block)
    LF_H                    [reduce using rule 115 (quote_block)]
    LF_UL                   [reduce using rule 115 (quote_block)]
    LF_VERTICAL             [reduce using rule 115 (quote_block)]
    LF_INDENT               [reduce using rule 115 (quote_block)]
    LF_INDENT2              [reduce using rule 115 (quote_block)]
    LF_INDENT3              [reduce using rule 115 (quote_block)]
    LF_INDENT4              [reduce using rule 115 (quote_block)]
    LF_INDENT5              [reduce using rule 115 (quote_block)]
    LF_Q_H                  reduce using rule 115 (quote_block)
    LF_Q_UL                 reduce using rule 115 (quote_block)
    LF_Q_VERTICAL           reduce using rule 115 (quote_block)
    LF_Q_INDENT             reduce using rule 115 (quote_block)
    LF_Q_INDENT2            reduce using rule 115 (quote_block)
    LF_Q_INDENT3            reduce using rule 115 (quote_block)
    LF_Q                    reduce using rule 115 (quote_block)
    SIMPLELINK              [reduce using rule 115 (quote_block)]
    HTMLTAG                 [reduce using rule 115 (quote_block)]
    SCRIPTSTART             [reduce using rule 115 (quote_block)]
    STYLESTART              [reduce using rule 115 (quote_block)]
    SVGSTART                [reduce using rule 115 (quote_block)]
    ESCAPEDCHAR             [reduce using rule 115 (quote_block)]
    BACKTICK                [reduce using rule 115 (quote_block)]
    DOUBLEASTERISK          [reduce using rule 115 (quote_block)]
    ASTERISK                [reduce using rule 115 (quote_block)]
    DOUBLEUNDERSCORE        [reduce using rule 115 (quote_block)]
    UNDERSCORE              [reduce using rule 115 (quote_block)]
    EXCLAMATION_LEFTSQUARE  [reduce using rule 115 (quote_block)]
    LEFTSQUARE              [reduce using rule 115 (quote_block)]
    DOUBLETILDE             [reduce using rule 115 (quote_block)]
    SPACE                   [reduce using rule 115 (quote_block)]
    TEXT                    [reduce using rule 115 (quote_block)]

    block             go to state 30
    codeblock         go to state 31
    header            go to state 32
    image             go to state 33
    inline_element    go to state 34
    inline_elements   go to state 35
    inline_text       go to state 36
    inline_text_item  go to state 37
    uri_text_item     go to state 38
    inlinecode        go to state 39
    italic            go to state 40
    lf_indents        go to state 41
    lf_indents2       go to state 42
    lf_indents3       go to state 43
    lf_indents4       go to state 44
    lf_indents5       go to state 45
    linethrough       go to state 46
    line              go to state 47
    lines             go to state 48
    link              go to state 49
    paragraph         go to state 50
    quote_block       go to state 51
    strong            go to state 52
    unorderlist_0     go to state 53
    table             go to state 54
    table_body        go to state 55
    table_head        go to state 56
    table_row         go to state 57
    table_rows        go to state 58


state 3

    0 $accept: markdown_file $end .

    $default  accept


state 4

   13 block: error .

    $default  reduce using rule 13 (block)


state 5

    4 block: BLANKLINE .

    $default  reduce using rule 4 (block)


state 6

   22 header: LF_H . inline_elements LINEBREAK

    SIMPLELINK              shift, and go to state 14
    ESCAPEDCHAR             shift, and go to state 19
    BACKTICK                shift, and go to state 20
    DOUBLEASTERISK          shift, and go to state 21
    ASTERISK                shift, and go to state 22
    DOUBLEUNDERSCORE        shift, and go to state 23
    UNDERSCORE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LEFTSQUARE              shift, and go to state 26
    DOUBLETILDE             shift, and go to state 27
    SPACE                   shift, and go to state 28
    TEXT                    shift, and go to state 29

    image             go to state 33
    inline_element    go to state 34
    inline_elements   go to state 59
    inline_text       go to state 36
    inline_text_item  go to state 37
    uri_text_item     go to state 38
    inlinecode        go to state 39
    italic            go to state 40
    linethrough       go to state 46
    link              go to state 49
    strong            go to state 52


state 7

  145 unorderlist_0: LF_UL . line

    SIMPLELINK              shift, and go to state 14
    ESCAPEDCHAR             shift, and go to state 19
    BACKTICK                shift, and go to state 20
    DOUBLEASTERISK          shift, and go to state 21
    ASTERISK                shift, and go to state 22
    DOUBLEUNDERSCORE        shift, and go to state 23
    UNDERSCORE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LEFTSQUARE              shift, and go to state 26
    DOUBLETILDE             shift, and go to state 27
    SPACE                   shift, and go to state 28
    TEXT                    shift, and go to state 29

    image             go to state 33
    inline_element    go to state 34
    inline_elements   go to state 35
    inline_text       go to state 36
    inline_text_item  go to state 37
    uri_text_item     go to state 38
    inlinecode        go to state 39
    italic            go to state 40
    linethrough       go to state 46
    line              go to state 60
    link              go to state 49
    strong            go to state 52


state 8

  167 table_row: LF_VERTICAL . table_cells LINEBREAK

    SIMPLELINK              shift, and go to state 14
    ESCAPEDCHAR             shift, and go to state 19
    BACKTICK                shift, and go to state 20
    DOUBLEASTERISK          shift, and go to state 21
    ASTERISK                shift, and go to state 22
    DOUBLEUNDERSCORE        shift, and go to state 23
    UNDERSCORE              shift, and go to state 24
    EXCLAMATION_LEFTSQUARE  shift, and go to state 25
    LEFTSQUARE              shift, and go to state 26
    DOUBLETILDE             shift, and go to state 27
    SPACE                   shift, and go to state 28
    TEXT                    shift, and go to state 29

    image             go to state 33
    inline_element    go to state 34
    inline_elements   go to state 61
    inline_text       go to state 36
    inline_text_item  go to state 37
    uri_text_item     go to state 38
    inlinecode        go to state 39
    italic            go to state 40
    linethrough       go to state 46
    link              go to state 49
    strong            go to state 52
    table_cell        go to state 62
    table_cells       go to state 63


state 9

   71 lf_indents: LF_INDENT .

    $default  reduce using rule 71 (lf_indents)


state 10

   73 lf_indents2: LF_INDENT2 .

    $default  reduce using rule 73 (lf_indents2)


state 11

   75 lf_indents3: LF_INDENT3 .

    $default  reduce using rule 75 (lf_indents3)


state 12

   77 lf_indents4: LF_INDENT4 .

    $default  reduce using rule 77 (lf_indents4)


state 13

   79 lf_indents5: LF_INDENT5 .

    $default  reduce using rule 79 (lf_indents5)


state 14

  107 link: SIMPLELINK .

    $default  reduce using rule 107 (link)


state 15

    5 block: HTMLTAG .

    $default  reduce using rule 5 (block)


state 16

    6 block: SCRIPTSTART . code_text SCRIPTEND

    ESCAPEDCHAR              shift, and go to state 19
    TRIPLEBACKTICK           shift, and go to state 64
    BACKTICK                 shift, and go to state 65
    VERTICAL                 shift, and go to state 66
    TRIPLEASTERISK           shift, and go to state 67
    DOUBLEASTERISK           shift, and go to state 68
    ASTERISK                 shift, and go to state 69
    TRIPLEUNDERSCORE         shift, and go to state 70
    DOUBLEUNDERSCORE         shift, and go to state 71
    UNDERSCORE               shift, and go to state 72
    EXCLAMATION_LEFTSQUARE   shift, and go to state 73
    LEFTSQUARE               shift, and go to state 74
    RIGHTSQUARE_LEFTBRACKET  shift, and go to state 75
    RIGHTBRACKET             shift, and go to state 76
    DOUBLETILDE              shift, and go to state 77
    SPACE                    shift, and go to state 28
    TEXT                     shift, and go to state 29

    code_text              go to state 78
    code_text_item         go to state 79
    inline_code_text_item  go to state 80
    inline_text_item       go to state 81
    uri_text_item          go to state 38


state 17

    7 block: STYLESTART . code_text STYLEEND

    ESCAPEDCHAR              shift, and go to state 19
    TRIPLEBACKTICK           shift, and go to state 64
    BACKTICK                 shift, and go to state 65
    VERTICAL                 shift, and go to state 66
    TRIPLEASTERISK           shift, and go to state 67
    DOUBLEASTERISK           shift, and go to state 68
    ASTERISK                 shift, and go to state 69
    TRIPLEUNDERSCORE         shift, and go to state 70
    DOUBLEUNDERSCORE         shift, and go to state 71
    UNDERSCORE               shift, and go to state 72
    EXCLAMATION_LEFTSQUARE   shift, and go to state 73
    LEFTSQUARE               shift, and go to state 74
    RIGHTSQUARE_LEFTBRACKET  shift, and go to state 75
    RIGHTBRACKET             shift, and go to state 76
    DOUBLETILDE              shift, and go to state 77
    SPACE                    shift, and go to state 28
    TEXT                     shift, and go to state 29

    code_text              go to state 82
    code_text_item         go to state 79
    inline_code_text_item  go to state 80
    inline_text_item       go to state 81
    uri_text_item          go to state 38


state 18

    8 block: SVGSTART . code_text SVGEND

    ESCAPEDCHAR              shift, and go to state 19
    TRIPLEBACKTICK           shift, and go to state 64
    BACKTICK                 shift, and go to state 65
    VERTICAL                 shift, and go to state 66
    TRIPLEASTERISK           shift, and go to state 67
    DOUBLEASTERISK           shift, and go to state 68
    ASTERISK                 shift, and go to state 69
    TRIPLEUNDERSCORE         shift, and go to state 70
    DOUBLEUNDERSCORE         shift, and go to state 71
    UNDERSCORE               shift, and go to state 72
    EXCLAMATION_LEFTSQUARE   shift, and go to state 73
    LEFTSQUARE               shift, and go to state 74
    RIGHTSQUARE_LEFTBRACKET  shift, and go to state 75
    RIGHTBRACKET             shift, and go to state 76
    DOUBLETILDE              shift, and go to state 77
    SPACE                    shift, and go to state 28
    TEXT                     shift, and go to state 29

    code_text              go to state 83
    code_text_item         go to state 79
    inline_code_text_item  go to state 80
    inline_text_item       go to state 81
    uri_text_item          go to state 38


state 19

   57 inline_text_item: ESCAPEDCHAR .

    $default  reduce using rule 57 (inline_text_item)


state 20

   62 inlinecode: BACKTICK . inline_code_text BACKTICK
   63           | BACKTICK . inline_code_text error
   64           | BACKTICK . error

    error                    shift, and go to state 84
    ESCAPEDCHAR              shift, and go to state 19
    TRIPLEBACKTICK           shift, and go to state 64
    VERTICAL                 shift, and go to state 66
    TRIPLEASTERISK           shift, and go to state 67
    DOUBLEASTERISK           shift, and go to state 68
    ASTERISK                 shift, and go to state 69
    TRIPLEUNDERSCORE         shift, and go to state 70
    DOUBLEUNDERSCORE         shift, and go to state 71
    UNDERSCORE               shift, and go to state 72
    EXCLAMATION_LEFTSQUARE   shift, and go to state 73
    LEFTSQUARE               shift, and go to state 74
    RIGHTSQUARE_LEFTBRACKET  shift, and go to state 75
    RIGHTBRACKET             shift, and go to state 76
    DOUBLETILDE              shift, and go to state 77
    SPACE                    shift, and go to state 28
    TEXT                     shift, and go to state 29

    inline_code_text       go to state 85
    inline_code_text_item  go to state 86
    inline_text_item       go to state 81
    uri_text_item          go to state 38


state 21

  139 strong: DOUBLEASTERISK . inline_text DOUBLEASTERISK
  140       | DOUBLEASTERISK . inline_text error
  141       | DOUBLEASTERISK . error

    error        shift, and go to state 87
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29

    inline_text       go to state 88
    inline_text_item  go to state 37
    uri_text_item     go to state 38


state 22

   65 italic: ASTERISK . inline_text ASTERISK
   66       | ASTERISK . inline_text error
   67       | ASTERISK . error

    error        shift, and go to state 89
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29

    inline_text       go to state 90
    inline_text_item  go to state 37
    uri_text_item     go to state 38


state 23

  142 strong: DOUBLEUNDERSCORE . inline_text DOUBLEUNDERSCORE
  143       | DOUBLEUNDERSCORE . inline_text error
  144       | DOUBLEUNDERSCORE . error

    error        shift, and go to state 91
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29

    inline_text       go to state 92
    inline_text_item  go to state 37
    uri_text_item     go to state 38


state 24

   68 italic: UNDERSCORE . inline_text UNDERSCORE
   69       | UNDERSCORE . inline_text error
   70       | UNDERSCORE . error

    error        shift, and go to state 93
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29

    inline_text       go to state 94
    inline_text_item  go to state 37
    uri_text_item     go to state 38


state 25

   23 image: EXCLAMATION_LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET uri_text RIGHTBRACKET
   24      | EXCLAMATION_LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET uri_text SPACE uri_text RIGHTBRACKET
   25      | EXCLAMATION_LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET uri_text error
   26      | EXCLAMATION_LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET error
   27      | EXCLAMATION_LEFTSQUARE . inline_text error
   28      | EXCLAMATION_LEFTSQUARE . error

    error        shift, and go to state 95
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29

    inline_text       go to state 96
    inline_text_item  go to state 37
    uri_text_item     go to state 38


state 26

  101 link: LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET uri_text RIGHTBRACKET
  102     | LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET uri_text SPACE uri_text RIGHTBRACKET
  103     | LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET uri_text error
  104     | LEFTSQUARE . inline_text RIGHTSQUARE_LEFTBRACKET error
  105     | LEFTSQUARE . inline_text error
  106     | LEFTSQUARE . error

    error        shift, and go to state 97
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29

    inline_text       go to state 98
    inline_text_item  go to state 37
    uri_text_item     go to state 38


state 27

   95 linethrough: DOUBLETILDE . inline_text DOUBLETILDE
   96            | DOUBLETILDE . inline_text error
   97            | DOUBLETILDE . error

    error        shift, and go to state 99
    ESCAPEDCHAR  shift, and go to state 19
    SPACE        shift, and go to state 28
    TEXT         shift, and go to state 29
